# STM32F407_AUTOSAR

./: .gitignore  CHANGELOG.md  CMakeLists.txt  HARDWARE_SPEC.md  PROJECT_STRUCTURE.md  README.md  README_CN.md  ota_updater.py
bootloader/: CMakeLists.txt
bootloader/include/: boot.h  crc32.h  flash_drv.h  uds_bootloader.h
bootloader/ld/: STM32F407_Bootloader.ld
bootloader/src/: boot.c  crc32.c  flash_drv.c  main_bootloader.c  uds_bootloader.c
include/: BootloaderJump.h
src/board/: main.c
src/drivers/: CanDriver.c
src/utils/: BootloaderJump.c
tools/: README.md
